# better-ls

./: Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yaml  release.yaml  test.yaml
config/: colors.yml  files.yml  folders.yml
src/: beautify.rs  cli.rs  config.rs  entry.rs  errors.rs  list.rs  main.rs
